Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • G gvfs
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 422
    • Issues 422
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 23
    • Merge requests 23
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • gvfs
  • Issues
  • #307
Closed (duplicated) (duplicated)
Open
Issue created Jul 21, 2017 by Bugzilla@bugzilla-migration💬Reporter

Impossible to open smb share file

Submitted by Laurent

Assigned to gvf..@..e.bugs

Link to original bug (#785249)

Description

Created attachment 356152 The error message after open click on server icon in widows network

In nautilus application

  • select "Other palce"
  • select windows network
  • and click on server

=> if the server use only SMB2 or SMB3 it cannot be mounted. The error message displayed is "L'obtention de la liste des partages du serveur a échoué : Connexion terminée par expiration du délai d'attente"

This workflow is reproducible with gvfs command:

  • use gvfs-mount smb://Mulet.local/ => result of command is : "Erreur lors du montage de l'emplacement : L'obtention de la liste des partages du serveur a échoué : Connexion terminée par expiration du délai d'attente"

All work if the server use "SMB1" but it is a security fail.

Attachment 356152, "The error message after open click on server icon in widows network":
Capture_d_écran_de_2017-07-21_23-08-32

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking