network: Add display-mode gsettings key for SMB

Currently, it is not possible to merge the content of the Windows Network
folder or disable that completely in the network backend though that is
possible for DNS-SD services already. Let's add the `display-mode` gsettings
key in order to achieve that.

Related: https://gitlab.gnome.org/GNOME/gvfs/-/issues/307